# webserver_practice

./: LICENSE  Makefile  README.md  docker-compose.dev-backend.yml  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile
.static_analysis/: .black.cfg  .isort.cfg  .pylintrc  requirements.txt
connect4/ext/: dataclasses.py  itertools.py  mapping.py  typing.py  undefined.py
connect4/game/: board.py
docker/: dev.Dockerfile
protos/connect4/common/v1/: common.proto
protos/connect4/service/v1/: service_v1.proto
scripts/: lint_check.sh
tests/unit_tests/connect4/ext/: test_dataclasses.py  test_itertools.py  test_mapping.py  test_typing.py
tests/unit_tests/connect4/game/: test_board.py
