[tool.poetry]
name = "connect4"
version = "0.1.0"
description = "Example set of servers / services"
authors = ["Erik Nguyen <eriksnguyen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.5"
pyright = "^1.1.333"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
