[tool.poetry]
name = "connect4"
version = "0.1.0"
description = "Example set of servers / services"
authors = ["Erik Nguyen <eriksnguyen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
protobuf = "^5.27.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pylint = "3.2.2"
pyright = "^1.1.333"
ipdb = "^0.13.13"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
